@@ -1,6 +1,8 @@
 devel
 -----
 
+* UI: document/edge editor now remembering their modes (e.g. code or tree)
+
 * UI: optimized error messages for invalid graph definitions. Also fixed a
   graph renderer cleanrenderer cleanup error.
 
